# TP-Teste-de-Software

./: CMakeLists.txt  Makefile  README.md  data.h  hora.cpp  main.cpp  mytests.cpp
.github/workflows/: c-cpp.yml  makefile.yml
lib/: data.h  hora.h  lembrete.h
src/: data.cpp  lembrete.cpp  main.cpp
tests/: utest-lembrete.cpp
